# bank_bot

./: .gitignore  CMakeLists.txt  RULES.md  main.cpp
include/: test.h
include/config_core/: CMakeLists.txt
include/config_core/include/: cfg_variables.h  config.h  config_core.h
include/config_core/source/: config.cpp  config_core.cpp
include/control_core/: CMakeLists.txt
include/control_core/include/: control_core.h
include/control_core/source/: control_core.cpp
include/data_core/: CMakeLists.txt
include/data_core/include/: data_base.h  data_core.h  data_storage.h  dc_variables.h
include/data_core/source/: data_base.cpp  data_core.cpp  data_storage.cpp
include/file_core/: CMakeLists.txt
include/file_core/include/: fc_variables.h  file_core.h  file_downloader.h
include/file_core/source/: CMakeLists.txt  file_core.cpp  file_downloader.cpp  file_unzip.cpp
include/imap/: CMakeLists.txt
include/imap/include/: email.h  imap_client.h  imap_tools.h  imap_variables.h  mail.h  mail_request.h  simple_mail.h
include/imap/source/: CMakeLists.txt  imap_client.cpp  mail.cpp  simple_mail.cpp  tools.cpp
include/parser_core/: CMakeLists.txt
include/parser_core/include/: parser_core.h  pc_tools.h  pc_variables.h
include/parser_core/source/: CMakeLists.txt  parser_core.cpp  tools.cpp
include/parser_core/src/: body_with_base64.txt  body_with_url.txt
include/shared/include/: bot_app.h  daily_operations.h  exceptions.h  mail_account.h  record.h  statement.h  tools.h
include/shared/source/: bot_app.cpp  daily_operations.cpp  record.cpp  statement.cpp  tools.cpp
lib/bzip2/: CMakeLists.txt
lib/bzip2/source/: CMakeLists.txt  cmake_install.cmake
lib/file_core/: CMakeLists.txt
lib/file_core/include/: file_core.h  file_downloader.h  file_unzip.h
lib/file_core/source/: file_core.cpp  file_downloader.cpp  file_unzip.cpp
lib/quazip/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
source/: CMakeLists.txt  test.cpp
src/: config.json  export_db.sql  kl_to_1c.txt
src/DB/: data_structure.txt  insert_fields_properties.txt  order_fields.txt
src/Выписки/: KL_to_1C (10).txt  KL_to_1C (3).txt  KL_to_1C (4).txt  KL_to_1C (5).txt  KL_to_1C (6).txt  KL_to_1C (7).txt  KL_to_1C (8).txt  KL_to_1C (9).txt
